--- a/myTicTacToe/src/main/webapp/index.html
+++ b/myTicTacToe/src/main/webapp/index.html
@@ -12,10 +12,13 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-postman/js/postman.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@yaireo/tagify@3.1.0/dist/tagify.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify@3.1.0/dist/tagify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
 
     <script src="js/application.js"></script>
     <script src="js/GameModule.js"></script>
-
 
     <style>
         .Border {
@@ -66,5 +69,4 @@
     </footer>
 
 </body>
-
 </html>
